--- a/Neural_Net_FND.ipynb
+++ b/Neural_Net_FND.ipynb
@@ -19,7 +19,20 @@
     "id": "lQ7LImVTDHel"
    },
    "source": [
-    "# Fake News Detection using Neural Networks"
+    "# Fake News Detection using Neural Networks\n",
+    "---\n",
+    "In this notebook, our mission is to construct a robust neural network for discerning the authenticity of news articles. The approach will be as follows:\n",
+    "\n",
+    "* Data Exploration and Cleansing\n",
+    "* Data Selection and Encoding\n",
+    "* Text Preprocessing\n",
+    "* Neural Network Architecture\n",
+    "* Model Training and Evalutation\n",
+    "* Real-time Prediction\n",
+    "\n",
+    "An example of a real and fake news are shown below.\n",
+    "\n",
+    "<img src='notebook_ims/real_fake_example.png' width=30% height=70% />"
    ]
   },
   {
