--- a/Neural_Net_FND.ipynb
+++ b/Neural_Net_FND.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "An example of a real and fake news are shown below.\n",
     "\n",
-    "<img src='notebook_ims/real_fake_example.png' width=50% height=80% />\n",
+    "<img src='notebook_ims/real_fake_example.png'/>\n",
     "\n",
     "Our dataset comprises a collection of news articles labeled as either real or fake. We meticulously explore and preprocess this data to ensure our neural network receives high-quality inputs for training and evaluation.\n",
     "\n",
